--- a/scheduleStyles.css
+++ b/scheduleStyles.css
@@ -1,3 +1,11 @@
+* {
+	box-sizing: border-box;
+}
+
+html, body {
+	min-height: 100vh;
+}
+
 body {
     margin: 0;
     font-family:"Lato", "Open Sans", Arial, sans-serif;
@@ -6,7 +14,7 @@ body {
 .primary-header{
   color: #fff;
   background-color: #4a5e5e;
-  padding-bottom: 10px;
+  padding: 10px 20px;
 }
 
 h1, h2 {
@@ -16,7 +24,7 @@ h1, h2 {
 
 .heading {
     text-align: center;
-    font-size: 9vh;
+    font-size: 7vh;
     letter-spacing: .5px;
     padding: 6px 0;
     text-transform: uppercase;
@@ -24,9 +32,9 @@ h1, h2 {
 }
 
 .dates {
-    margin: 10px 0;
+    margin: 16px 0;
     text-align: center;
-    font-size: 1.5vw;
+    font-size: 2.375vh;
     letter-spacing: 1px;
     font-weight: 300;
 }
@@ -41,37 +49,11 @@ h1, h2 {
 }
 
 .schedule {
-    display: grid;
+    display: flex;
+	flex-direction: column;
     width:90vw;
     margin: 2vh auto;
 	grid-gap: .5em;
-	grid-template-rows:
-		[weekDays] auto
-		[time-0830] auto
-		[time-0900] auto
-		[time-0930] auto
-		[time-1000] auto
-		[time-1030] auto
-		[time-1100] auto
-		[time-1130] auto
-		[time-1200] auto
-        [time-1230] auto
-        [time-1300] auto
-        [time-1330] auto
-        [time-1400] auto
-        [time-1430] auto
-        [time-1500] auto
-        [time-1530] auto
-	;
-	grid-template-columns:
-		[times] 7em
-		[track-1-start] 1fr
-		[track-1-end track-2-start] 1fr
-		[track-2-end track-3-start] 1fr
-		[track-3-end track-4-start] 1fr
-        [track-4-end track-5-start] 1fr
-		[track-5-end]
-	;
 }
 
 .title, span.track, .time {
@@ -80,14 +62,41 @@ h1, h2 {
 }
 
 .time-slot {
-   	margin: 0;
-    text-align: right;
+   	display: none;
+}
+
+.Monday, .Tuesday, .Wednesday, .Thursday, .Friday {
+	grid-row: weekDays;
+}
+
+.Monday {
+	grid-column: track-1;
+}
+
+.Tuesday {
+	grid-column: track-2;
+}
+
+.Wednesday {
+	grid-column: track-3;
+	position: relative;
+    top: 300px;
+}
+
+.Thursday {
+	grid-column: track-4;
+}
+
+.Friday {
+	grid-column: track-5;
 }
 
 .track-slot {
+	padding: 10px 5px;
     font-weight: bold;
     font-size: 1.35em;
     text-align: center;
+	background-color: #d0d0d0;
 }
 
 span {
@@ -97,6 +106,8 @@ span {
 .mdcp-102-rnf, .gdpw-153-rna{
 	background-color: #687f00;
 	color: #fff;
+	position: relative;
+    top: -161px;
 }
 
 .mdcp-102-rne {
@@ -135,15 +146,51 @@ span {
 	background-color: cornflowerblue;
 }
 
-@media screen and (min-width:700px) {
-		
-	.track-slot {
-		display: block;
-		padding: 10px 5px;
-        background-color: #d0d0d0;
+@media screen and (min-width:850px) {
+
+	.schedule {
+		display: grid;
+		grid-template-rows:
+		[weekDays] auto
+		[time-0830] auto
+		[time-0900] auto
+		[time-0930] auto
+		[time-1000] auto
+		[time-1030] auto
+		[time-1100] auto
+		[time-1130] auto
+		[time-1200] auto
+        [time-1230] auto
+        [time-1300] auto
+        [time-1330] auto
+        [time-1400] auto
+        [time-1430] auto
+        [time-1500] auto
+        [time-1530] auto
+	;
+		grid-template-columns:
+			[times] 7em
+			[track-1-start] .5fr    			/* Monday column */
+			[track-1-end track-2-start] 2fr 		/* Tuesday column */
+			[track-2-end track-3-start] 2fr 		/* Wednesday column */
+			[track-3-end track-4-start] .5fr 		/* Thursday column */
+			[track-4-end track-5-start] .5fr 		/* Friday column */
+			[track-5-end]
+		;
 	}
-    
-	.session {
+
+	.time-slot {
 		margin: 0;
+		text-align: left;
+		display:block;
 	}
+
+	.mdcp-102-rnf, .gdpw-153-rna{
+		top: 0;
+	}
+
+	.Wednesday {
+		top: 0;
+	}
+
 }
